Remove check for GECKO_USE_COMPUTED_HEIGHT environment variable.  b=196270  r+sr=roc  a=bsmedberg